syntax = "proto3";

option go_package = './proto/generated';

package proto;

message UserInfo{
  string userName = 1;
  string password = 2;
}